Fix z-index for maps
[3.1.x]

ERM#17537

Please cherry-pick to master

--- a/resources/bluespice.distribution.less
+++ b/resources/bluespice.distribution.less
@@ -1,6 +1,10 @@
 .quizQuestions .question .sign {
-  min-width: 26px;
-  input {
-    margin: 4px 0 4px 0;
-  }
+	min-width: 26px;
+	input {
+		margin: 4px 0 4px 0;
+	}
+}
+
+.maps-map {
+	z-index: 1;
 }
